Adding Basic Routing

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
-  <title>Washmycarweb</title>
+  <title>BookMyCarWash - India's Waterless On-Demand Car Wash Service</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="geo.country" content="in"/>
+  <meta name="description" content="Wash your car at your doorstep in kolkata"/>
+  <meta name="keywords" content="Car wash, Washmycar waterless car cleaning, Washmycar on demand car cleaning, waterless car cleaning service , On-Demand Car cleaning , Eco-friendly car cleaning , waterless car cleaning Kolkata , Waterless car cleaning India , India's best car cleaning , Doorstep Car Cleaning Kolkata"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
   <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
