--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Wash your car at your doorstep in kolkata"/>
   <meta name="keywords" content="Car wash, Washmycar waterless car cleaning, Washmycar on demand car cleaning, waterless car cleaning service , On-Demand Car cleaning , Eco-friendly car cleaning , waterless car cleaning Kolkata , Waterless car cleaning India , India's best car cleaning , Doorstep Car Cleaning Kolkata"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="http://maps.googleapis.com/maps/api/js"></script>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
   <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -22,6 +23,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.easing.min.js"></script>
     <script src="assets/js/custom.js"></script>
+
     <script src="assets/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   
